...
            <FrameLayout
                android:id="@+id/backButtonFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/headerTitleCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/add_course_header"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
...
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/course_name"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerTitle" />

            <EditText
                android:id="@+id/courseNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/enter_course_name_here"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseNameView" />
            <TextView
                android:id="@+id/statusNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/status"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/status"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/assessments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/assessments"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/endDatePicker" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assessmentsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessments" />

            <Button
                android:id="@+id/addAssessmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addAssessmentClick"
                android:text="@string/add_assessment_button" />

            <TextView
...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/endDatePicker" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instructorsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructors" />

            <Button
                android:id="@+id/addInstructorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addInstructorClick"
                android:text="@string/add_instructor" />

            <TextView
...
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notesRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/addNoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNoteClick"
                android:text="@string/add_note"
                />

...
