...
                android:text="@string/add_term_header"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/termNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/add_term_name"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/termNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:importantForAutofill="no"
                android:inputType="text" />
            <TextView
...
                android:text="@string/courses"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/addCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addCourseClick"
                android:text="@string/add_course_button"
                />
        <LinearLayout
...
