...
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="@color/teal_200">

    <TextView
        android:id="@+id/noteMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="5dp"
...
