...
    card_view:cardBackgroundColor="@color/teal_200">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/assessmentNameTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingTop="5dp"
...
